--- a/BP/Base.lproj/Main.storyboard
+++ b/BP/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edK-iC-eml">
                                         <rect key="frame" x="0.0" y="524" width="382" height="131"/>
                                         <state key="normal" title="Storage"/>
+                                        <connections>
+                                            <segue destination="3Oh-Jy-npe" kind="showDetail" id="B87-E7-eEC"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkA-UJ-XTY">
                                         <rect key="frame" x="0.0" y="655" width="382" height="131"/>
@@ -66,6 +69,70 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="139" y="126"/>
+        </scene>
+        <!--Storage View Controller-->
+        <scene sceneID="cec-uJ-jC1">
+            <objects>
+                <viewController id="3Oh-Jy-npe" customClass="StorageViewController" customModule="BP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="384-w6-nEZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="45x-qt-s3Q">
+                                <rect key="frame" x="320" y="102" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="AZu-9y-0ub"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="save:" destination="3Oh-Jy-npe" eventType="touchUpInside" id="4xM-pd-Hig"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text typed here, will be saved" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7p-Rn-x6f">
+                                <rect key="frame" x="12" y="42" width="390" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Nmp-5b-13r">
+                                <rect key="frame" x="12" y="320" width="390" height="476"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kit-9f-Qrm">
+                                <rect key="frame" x="80" y="230" width="254" height="30"/>
+                                <state key="normal" title="Click here to load the text"/>
+                                <connections>
+                                    <action selector="load:" destination="3Oh-Jy-npe" eventType="touchUpInside" id="Lm6-fa-ObA"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Yaf-Pv-rdA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="r7p-Rn-x6f" firstAttribute="leading" secondItem="Yaf-Pv-rdA" secondAttribute="leading" constant="12" id="BiH-4e-8Rb"/>
+                            <constraint firstItem="Yaf-Pv-rdA" firstAttribute="trailing" secondItem="Nmp-5b-13r" secondAttribute="trailing" constant="12" id="CJQ-ZU-bqA"/>
+                            <constraint firstItem="Yaf-Pv-rdA" firstAttribute="bottom" secondItem="Nmp-5b-13r" secondAttribute="bottom" constant="12" id="E2v-dH-4be"/>
+                            <constraint firstItem="Yaf-Pv-rdA" firstAttribute="trailing" secondItem="r7p-Rn-x6f" secondAttribute="trailing" constant="12" id="GcA-GQ-lul"/>
+                            <constraint firstItem="Nmp-5b-13r" firstAttribute="leading" secondItem="Yaf-Pv-rdA" secondAttribute="leading" constant="12" id="JDO-wA-Jcg"/>
+                            <constraint firstItem="Kit-9f-Qrm" firstAttribute="top" secondItem="r7p-Rn-x6f" secondAttribute="bottom" constant="154" id="OWb-N8-k0Q"/>
+                            <constraint firstItem="Yaf-Pv-rdA" firstAttribute="trailing" secondItem="45x-qt-s3Q" secondAttribute="trailing" constant="44" id="Rdh-HY-jfo"/>
+                            <constraint firstItem="r7p-Rn-x6f" firstAttribute="top" secondItem="Yaf-Pv-rdA" secondAttribute="top" constant="42" id="UY2-LE-c6P"/>
+                            <constraint firstItem="Yaf-Pv-rdA" firstAttribute="trailing" secondItem="Kit-9f-Qrm" secondAttribute="trailing" constant="80" id="a3H-eR-GUt"/>
+                            <constraint firstItem="Nmp-5b-13r" firstAttribute="top" secondItem="Kit-9f-Qrm" secondAttribute="bottom" constant="60" id="cFj-Gj-AMK"/>
+                            <constraint firstItem="Kit-9f-Qrm" firstAttribute="leading" secondItem="Yaf-Pv-rdA" secondAttribute="leading" constant="80" id="g7K-P8-EgA"/>
+                            <constraint firstItem="45x-qt-s3Q" firstAttribute="top" secondItem="r7p-Rn-x6f" secondAttribute="bottom" constant="26" id="sfP-mr-4kj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="resultText" destination="Nmp-5b-13r" id="9ib-yS-OY4"/>
+                        <outlet property="targetText" destination="r7p-Rn-x6f" id="0hg-VQ-hhq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eNp-23-YTh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="942.02898550724649" y="-526.33928571428567"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="ANo-Hz-tee">
@@ -190,6 +257,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
