--- a/BP/Base.lproj/Main.storyboard
+++ b/BP/Base.lproj/Main.storyboard
@@ -57,7 +57,10 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkA-UJ-XTY">
                                         <rect key="frame" x="0.0" y="655" width="382" height="131"/>
-                                        <state key="normal" title="Bluetooth"/>
+                                        <state key="normal" title="Performance"/>
+                                        <connections>
+                                            <segue destination="b0R-Gq-xh8" kind="showDetail" id="PnA-9F-d9N"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -309,8 +312,85 @@
             </objects>
             <point key="canvasLocation" x="1036" y="817"/>
         </scene>
+        <!--Performance View Controller-->
+        <scene sceneID="YyD-Jq-DAN">
+            <objects>
+                <viewController id="b0R-Gq-xh8" customClass="PerformanceViewController" customModule="BP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aOp-q4-FaE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TxV-ye-gTD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="109" id="iVt-tC-Nxt" customClass="CellPrototype" customModule="BP" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="109"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iVt-tC-Nxt" id="psF-XB-yho">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="109"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="LW4-HI-kvc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="109"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="rEA-D2-uni"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="giU-SY-aXj">
+                                                    <rect key="frame" x="357" y="39.5" width="50" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="0gY-IQ-FSi"/>
+                                                        <constraint firstAttribute="width" constant="50" id="yCC-Pj-SSb"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Tap me"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum....." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcg-9n-tPj">
+                                                    <rect key="frame" x="126" y="44.5" width="225" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="LW4-HI-kvc" secondAttribute="bottom" id="L6e-ey-w2e"/>
+                                                <constraint firstItem="giU-SY-aXj" firstAttribute="leading" secondItem="vcg-9n-tPj" secondAttribute="trailing" constant="6" id="T5w-h5-XwG"/>
+                                                <constraint firstAttribute="trailing" secondItem="giU-SY-aXj" secondAttribute="trailing" constant="7" id="WSf-Kd-QKt"/>
+                                                <constraint firstItem="vcg-9n-tPj" firstAttribute="centerY" secondItem="psF-XB-yho" secondAttribute="centerY" id="XwS-dp-Sjl"/>
+                                                <constraint firstItem="LW4-HI-kvc" firstAttribute="top" secondItem="psF-XB-yho" secondAttribute="top" id="bMU-c5-9Ri"/>
+                                                <constraint firstItem="vcg-9n-tPj" firstAttribute="leading" secondItem="LW4-HI-kvc" secondAttribute="trailing" constant="6" id="csq-Yj-VJd"/>
+                                                <constraint firstItem="giU-SY-aXj" firstAttribute="centerY" secondItem="psF-XB-yho" secondAttribute="centerY" id="lgE-ak-HAe"/>
+                                                <constraint firstItem="LW4-HI-kvc" firstAttribute="leading" secondItem="psF-XB-yho" secondAttribute="leading" id="no4-H4-H7D"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="btn" destination="giU-SY-aXj" id="CCM-St-o0L"/>
+                                            <outlet property="customText" destination="vcg-9n-tPj" id="Fja-AO-8BM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Pq2-PG-CZq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Pq2-PG-CZq" firstAttribute="bottom" secondItem="TxV-ye-gTD" secondAttribute="bottom" id="Icw-As-X1f"/>
+                            <constraint firstItem="Pq2-PG-CZq" firstAttribute="trailing" secondItem="TxV-ye-gTD" secondAttribute="trailing" id="Nvq-83-7VK"/>
+                            <constraint firstItem="TxV-ye-gTD" firstAttribute="leading" secondItem="Pq2-PG-CZq" secondAttribute="leading" id="bha-ks-V2A"/>
+                            <constraint firstItem="TxV-ye-gTD" firstAttribute="top" secondItem="Pq2-PG-CZq" secondAttribute="top" id="zQ7-Nx-stf"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="table" destination="TxV-ye-gTD" id="Qli-Bp-WyQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnq-5z-5cn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1034.7826086956522" y="1544.8660714285713"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="image" width="327" height="115"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
