--- a/BP/Base.lproj/Main.storyboard
+++ b/BP/Base.lproj/Main.storyboard
@@ -58,9 +58,6 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkA-UJ-XTY">
                                         <rect key="frame" x="0.0" y="655" width="382" height="131"/>
                                         <state key="normal" title="Performance"/>
-                                        <connections>
-                                            <segue destination="b0R-Gq-xh8" kind="showDetail" id="PnA-9F-d9N"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -74,6 +71,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W0B-at-T1t" secondAttribute="trailing" constant="16" id="wYh-1N-KsF"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="performanceBtn" destination="AkA-UJ-XTY" id="9VU-p7-TZX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -315,13 +315,13 @@
         <!--Performance View Controller-->
         <scene sceneID="YyD-Jq-DAN">
             <objects>
-                <viewController id="b0R-Gq-xh8" customClass="PerformanceViewController" customModule="BP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PerformanceViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="b0R-Gq-xh8" customClass="PerformanceViewController" customModule="BP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aOp-q4-FaE">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TxV-ye-gTD">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="109" id="iVt-tC-Nxt" customClass="CellPrototype" customModule="BP" customModuleProvider="target">
